documentação final api
