# app/Http/Controllers/ProdutoController.php
@@ -36,7 +36,23 @@ class ProdutoController extends Controller
         return array_reverse($produtos);
     }
 
-
+    /**
+     * @OA\Get(
+     *      path="/api/produto/create",
+     *      operationId="produto.create",
+     *      tags={"Produtos"},
+     *      summary="Get list of models for create produto",
+     *      description="Returns list of create models",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Requets",
+     *      )
+     *     )
+     */
     public function create()
     {
         $marcas = Marca::all();
@@ -89,11 +105,73 @@ class ProdutoController extends Controller
         return response()->json('Eletrodoméstico criado!');
     }
 
+        /**
+     * @OA\Get(
+     *      path="/api/produto/{produto}",
+     *      operationId="produto.show",
+     *      tags={"Produtos"},
+     *      summary="Get produto information",
+     *      description="Returns produto data",
+     *      @OA\Parameter(
+     *          name="produto",
+     *          description="Produto id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      )
+     * )
+     */
     public function show($id)
     {
         $product = Produto::find($id);
         return response()->json($product);
     }
+        /**
+     * @OA\Put(
+     *      path="/api/produto/{produto}",
+     *      operationId="produto.update",
+     *      tags={"Produtos"},
+     *      summary="Update existing produto",
+     *      description="Returns updated produto data",
+     *      @OA\Parameter(
+     *          name="produto",
+     *          description="Produto id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *       @OA\RequestBody(
+     *    required=true,
+     *    description="Oasse as informações do produto",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="nome", type="string", example="Update Freezer"),
+     *       @OA\Property(property="descricao", type="string", example="Update texto longo"),
+     *       @OA\Property(property="tensao", type="string", example="220v"),
+     *       @OA\Property(property="marca_id", type="integer", example="1"),
+     *    ),
+     * ),
+     *      @OA\Response(
+     *          response=202,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      )
+     * )
+     */
     public function update($id, Request $request)
     {
         $produto = Produto::find($id);
